--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
 h1{
     background-color:aquamarine;
 }
+
+p{
+    background-color: red;
+    padding: 20px;
+    border: 10px solid green;
+    color: white;
+}
